--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ img{
     text-align: center;
     background-color: #b6b3a9d5;
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-
+    box-shadow: 0 5px 15px rgb(0, 0, 0, 0.6);
 
 
 }
@@ -108,8 +108,9 @@ img{
     text-align: justify;
     text-decoration: none;
     list-style: none;
+    border: 2px transparent black;
     border-radius: 8%;
-
+    box-shadow: 0 5px 15px rgb(0, 0, 0, 0.6);
 
 }
 .monitoramento a {
@@ -142,9 +143,9 @@ img{
     text-align: justify;
     text-decoration: none;
     list-style: none;
-
+    border: 2px transparent black;
     border-radius: 8%;
-
+    box-shadow: 0 5px 15px rgb(0, 0, 0, 0.6);
 }
 
 .alarme a {
@@ -170,9 +171,9 @@ img{
     text-align: justify;
     text-decoration: none;
     list-style: none;
-
+    border: 2px transparent black;
     border-radius: 8%;
-
+    box-shadow: 0 5px 15px rgb(0, 0, 0, 0.6);
 }
 
 .camera a {
@@ -199,7 +200,7 @@ img{
 
 .bannerEmive2{
     grid-area: bannerEmive2;
-
+    box-shadow: 0 5px 15px rgb(0, 0, 0, 0.6);
 
 }
 
@@ -221,4 +222,4 @@ footer a{
     color: #000000;
     border-radius: 10px;
     text-decoration: none;
-} 
+}
